toxxi/tests/snapshots/widgets_input_box_test__input_box_multiline.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/input_box_test.rs
expression: rendered
---
────────────────────
╭──────────────────╮
│> Line 1          │
│  Line 2          │
│                  │
╰──────────────────╯
────────────────────
