toxxi/tests/snapshots/widgets_input_box_test__input_box_unicode.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/input_box_test.rs
expression: rendered
---
────────────────────
╭──────────────────╮
│> 你好 🤝🏾 Toxxi  ↳│
│  🦀              │
│                  │
╰──────────────────╯
────────────────────
